fix(graph): preserve GraphFlux callback generic types